AP-19971: Make row-based slicing cancellable
AP-19971 (Improve performance of the Parallel Chunk Loop with the Columnar Backend)